manifests/facade/facade-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facade-service
  labels:
    run: facade
spec:
  type: ClusterIP
  ports:
  - port: facade-port
    targetPort: facade-app
  selector:
    run: facade
