manifests/facade/facade-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facade-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "k8s-facade-ip"
    networking.gke.io/managed-certificates: facade-managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: ssl-redirect
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: facade-service
            port:
              number: 3000
